--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
         <p>Assignments I've Completed:</p>
 
         <ol>
-            <li></li>
+            <li>Future Assignment 1</li>
         </ol>
 
         <p>Labs I've Completed:</p>
 
         <ol>
-            <li>Lab 1</li>
             <li><a target="_blank" href="index.html">Lab 2</a></li>
         </ol>
 
