--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <p>Assignments I've Completed:</p>
 
         <ol>
-            <li>Future Assignment 1</li>
+            <li><a target="_blank" href="assignment_01/resume.html">Assignment 1</a></li>
         </ol>
 
         <p>Labs I've Completed:</p>
