--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <ol>
             <li><a target="_blank" href="index.html">Lab 2</a></li>
-            <li><a target="_blank" href="lab_03/resume.html">Lab 3</a>a></li>
+            <li><a target="_blank" href="lab_03/resume.html">Lab 3</a></li>
         </ol>
 
     </body>
