--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 
         <ol>
             <li><a target="_blank" href="assignment_01/resume.html">Assignment 1</a></li>
+            <li><a target="_blank" href="assignment_02/hobby.html">Assignment 2</a></li>
         </ol>
 
         <p>Labs I've Completed:</p>
