--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <ol>
             <li><a target="_blank" href="assignment_01/resume.html">Assignment 1</a></li>
             <li><a target="_blank" href="assignment_02/hobby.html">Assignment 2</a></li>
+            <li><a target="_blank" href="assignment_03/hobby.html">Assignment 3</a></li>
         </ol>
         </div>
 
