--- a/assignment_03/hobby.html
+++ b/assignment_03/hobby.html
@@ -70,9 +70,9 @@
 
             .container {
                 width: 1000px;
-                margin: auto;
                 display: inline-flex;
                 justify-content: center;
+                margin-left: 220px;
             }
 
             .sidebar{
