--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
             <li><a target="_blank" href="index.html">Lab 2</a></li>
             <li><a target="_blank" href="lab_03/resume.html">Lab 3</a></li>
             <li><a target="_blank" href="index.html">Lab 4</a></li>
+            <li><a target="_blank" href="lab_05/survey.html">Lab 5</a></li>
         </ol>
         </div>
         </div>
