--- a/lab_05/confirmation.html
+++ b/lab_05/confirmation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Order Confirmation</title>
+        <title>Submission Received</title>
         
         <style>
             body {
@@ -10,7 +10,7 @@
         </style>
     </head>
     <body>
-        <h1>Order Confirmation</h1>
+        <h1>Submission Received</h1>
         <p></p>
         <p>Thank you for your submission.</p>
     </body>
