--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             <li><a target="_blank" href="assignment_01/resume.html">Assignment 1</a></li>
             <li><a target="_blank" href="assignment_02/hobby.html">Assignment 2</a></li>
             <li><a target="_blank" href="assignment_03/hobby.html">Assignment 3</a></li>
+            <li><a target="_blank" href="assignment_04/birthday-calendar.html">Assignment 4</a></li>
         </ol>
         </div>
 
