--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li><a target="_blank" href="lab_03/resume.html">Lab 3</a></li>
             <li><a target="_blank" href="index.html">Lab 4</a></li>
             <li><a target="_blank" href="lab_05/survey.html">Lab 5</a></li>
+            <li><a target="_blank" href="lab_06/gallery.html">Lab 6</a></li>
         </ol>
         </div>
         </div>
