--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <li><a target="_blank" href="index.html">Lab 4</a></li>
             <li><a target="_blank" href="lab_05/survey.html">Lab 5</a></li>
             <li><a target="_blank" href="lab_06/gallery.html">Lab 6</a></li>
+            <li><a target="_blank" href="lab_07/puzzle.html">Lab 7</a></li>
         </ol>
         </div>
         </div>
