--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             <li><a target="_blank" href="assignment_03/hobby.html">Assignment 3</a></li>
             <li><a target="_blank" href="assignment_04/birthday-calendar.html">Assignment 4</a></li>
             <li><a target="_blank" href="assignment_05/hobby.html">Assignment 5</a></li>
+            <li><a target="_blank" href="assignment_06/hobby.html">Assignment 6</a></li>
         </ol>
         </div>
 
