--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
     <head>
         <title>Olivia Dien | Student Page</title>
+
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         
         <style>
+
             strong {
                 background-color: darkseagreen;
                 color: darkslategray;
@@ -24,6 +27,31 @@
                 display: inline-flex;
                 flex-direction: column;
                 margin: auto;
+            }
+
+            @media (max-width: 767px) {
+                body {
+                    width: auto;
+                    padding: 15px;
+                }
+
+                .container {
+                    width: auto;
+                    margin: 0px;
+                }
+
+                .columns {
+                    width: auto;
+                    display: flex;
+                    flex-direction: column;
+                    width: auto;
+                    margin: 0px;
+                    padding: 0px;
+                }
+
+                img {
+                    width: auto;
+                }
             }
                 
         </style>
