--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             <li><a target="_blank" href="assignment_04/birthday-calendar.html">Assignment 4</a></li>
             <li><a target="_blank" href="assignment_05/hobby.html">Assignment 5</a></li>
             <li><a target="_blank" href="assignment_06/hobby.html">Assignment 6</a></li>
+            <li><a target="_blank" href="assignment_07/final_proposal.html">Assignment 7</a></li>
         </ol>
         </div>
 
