--- a/assignment_07/final_proposal.html
+++ b/assignment_07/final_proposal.html
@@ -69,7 +69,7 @@
         <h2>Scope:</h2>
         <p>6 pages: home page, 3 recipes on their own page, form submission page, and an about page.</p>
         <h2>Wireframe:</h2>
-        <iframe src="Itp104 final project proposal wireframe.pdf" title="wireframe"></iframe>
+        <iframe src="Itp104-final-project-proposal-wireframe.pdf" title="wireframe"></iframe>
         </div>
     </body>
 </html>
