--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
             <li><a target="_blank" href="assignment_05/hobby.html">Assignment 5</a></li>
             <li><a target="_blank" href="assignment_06/hobby.html">Assignment 6</a></li>
             <li><a target="_blank" href="assignment_07/final_proposal.html">Assignment 7</a></li>
+            <li><a target="_blank" href="assignment_08/front_page.html">Assignment 8</a></li>
         </ol>
         </div>
 
