--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
             <li><a target="_blank" href="lab_06/gallery.html">Lab 6</a></li>
             <li><a target="_blank" href="lab_07/puzzle.html">Lab 7</a></li>
             <li><a target="_blank" href="lab_10/gallery.html">Lab 10</a></li>
+            <li><a target="_blank" href="lab_11/puzzle.html">Lab 11</a></li>
         </ol>
         </div>
         </div>
