--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
             <li><a target="_blank" href="assignment_06/hobby.html">Assignment 6</a></li>
             <li><a target="_blank" href="assignment_07/final_proposal.html">Assignment 7</a></li>
             <li><a target="_blank" href="assignment_08/front_page.html">Assignment 8</a></li>
+            <li><a target="_blank" href="assignment_09/about.html">Assignment 9</a></li>
         </ol>
         </div>
 
