--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
             <li><a target="_blank" href="lab_07/puzzle.html">Lab 7</a></li>
             <li><a target="_blank" href="lab_10/gallery.html">Lab 10</a></li>
             <li><a target="_blank" href="lab_11/puzzle.html">Lab 11</a></li>
+            <li><a target="_blank" href="lab_12/gallery.html">Lab 12</a></li>
         </ol>
         </div>
         </div>
