Final Project and Final Project Summary Submission

--- a/final_project/about.html
+++ b/final_project/about.html
@@ -18,6 +18,8 @@
                 margin: auto;
                 padding: 20px;
                 justify-content: center;
+                padding-bottom: 150px;
+                padding-top: 50px;
             }
 
             h1 {
@@ -36,6 +38,7 @@
 
             #about-me {
                 padding-left: 30px;
+                background-color: rgba(255, 255, 255, 0.8);
             }
 
             #title {
@@ -55,6 +58,7 @@
 
     </head>
     <body>
+        <div id="background-2">
         <div id="navbar">
             <ul id="top-menu">
                 <li><a href="front_page.html">Home</a>
@@ -72,7 +76,7 @@
                     <li><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a id="highlight-nav" href="about.html">About</a></li>
             </ul>
         </div>
@@ -105,6 +109,8 @@
                 </p>
 
             </div>
+        </div>
+
         </div>
         
     </body>
