--- a/final_project/focaccia.html
+++ b/final_project/focaccia.html
@@ -13,6 +13,8 @@
             h1 {
                 font-size: 300%;
                 margin-left: 222px;
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 10px;
             }
 
             #recipe {
@@ -29,14 +31,12 @@
                 color: rgb(43, 28, 0);
                 width: auto;
                 height: 500px;
-                padding-left: 20px;
-                padding-right: 30px;
-                padding-bottom: 20px;
+                padding: 10px 30px 30px 40px;
             }
 
             #image-container {
                 width: 500px;
-                height: 520px;
+                height: 540px;
                 overflow: hidden;
             }
 
@@ -69,6 +69,7 @@
         </style>
     </head>
     <body>
+        <div id="background-2">
 
         <div id="navbar">
             <ul id="top-menu">
@@ -87,7 +88,7 @@
                     <li><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -99,10 +100,13 @@
 
 
             <div id="container-a">
+
+                <p><em>This recipe is an adaptation of a recipe from LaceBakes.</em></p>
+
                 <h2>Ingredients:</h2>
 
                 <ul>
-                    <li>Dough</li>
+                    <li>Dough
                     <ul>
                         <li>500g bread flour</li>
                         <li>4g instant yeast</li>
@@ -111,7 +115,8 @@
                         <li>5g honey</li>
                         <li>10g fine sea salt</li>
                     </ul>
-                    <li>Topping Suggestions</li>
+                    </li>
+                    <li>Topping Suggestions
                     <ul>
                         <li>cherry tomatoes <div style="color: rgba(0, 0, 0, 0.5); display: inline;">my personal favorite topping</div></li>
                         <li>garlic cloves</li>
@@ -122,6 +127,7 @@
                         <li>sliced shallots</li>
                         <li>cheese</li>
                     </ul>
+                    </li>
                 </ul>
             </div>
 
@@ -231,6 +237,8 @@
                     wire rack to cool for at least 15-20 minutes. Serve with a balsamic
                     vinegar and olive oil dip if desired.</li>
             </ol>
+        </div>
+
         </div>
 
     </body>
