--- a/final_project/thit-kho.html
+++ b/final_project/thit-kho.html
@@ -12,6 +12,8 @@
             h1 {
                 font-size: 300%;
                 margin-left: 252px;
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 10px;
             }
 
             #recipe {
@@ -67,6 +69,7 @@
         </style>
     </head>
     <body>
+        <div id="background-2">
 
         <div id="navbar">
             <ul id="top-menu">
@@ -85,7 +88,7 @@
                     <li><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -142,6 +145,8 @@
                     vivid green.</li>
                 <li>Serve over a bowl of warm rice. Drizzle sauce over top <div style="color: rgba(0, 0, 0, 0.5); display: inline;">do not drink as soup</div></li>
             </ol>
+        </div>
+
         </div>
 
     </body>
