--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
                     width: auto;
                     display: flex;
                     flex-direction: column;
-                    width: auto;
                     margin: 0px;
                     padding: 0px;
                 }
@@ -120,6 +119,14 @@
             <li><a target="_blank" href="lab_12/gallery.html">Lab 12</a></li>
         </ol>
         </div>
+
+        <hr>
+
+        <div class="column" style="text-align: center;">
+            <p><span><a target="_blank" href="final_project/front_page.html">Final Project</a></span> 
+            and <span><a target="_blank" href="final_project/project-summary.html">Summary</a></span></p>
+        </div>
+
         </div>
     </body>
 </html>
