--- a/final_project/bun-rieu.html
+++ b/final_project/bun-rieu.html
@@ -3,8 +3,9 @@
     <head>
         <title>Bun Rieu</title>
 
-        <meta name="description" content="A step-by-step guide to our family 
-        recipe for Bun Rieu, complete with tips and suggestions.">
+        <meta name="description" content="A step-by-step guide to our family recipe 
+        for Bun Rieu, a Vietnamese tomato soup, complete with tips and suggestions.">
+
 
         <link rel="stylesheet" href="style.css">
 
@@ -12,6 +13,8 @@
             h1 {
                 font-size: 300%;
                 margin-left: 197px;
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 10px;
             }
 
             #recipe {
@@ -69,6 +72,7 @@
         </style>
     </head>
     <body>
+        <div id="background-2">
 
         <div id="navbar">
             <ul id="top-menu">
@@ -87,7 +91,7 @@
                     <li><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -101,8 +105,8 @@
             <div id="container-a">
                 <h2>Ingredients:</h2>
 
-                <ul>
-                    <li>Broth</li>
+                <ul id="components">
+                    <li>Broth
                     <ul>
                         <li>6 vine tomatoes cut into large crescent slices</li>
                         <li>1 large sweet onion cut into large crescent slices</li>
@@ -115,7 +119,8 @@
                         <li>3 tbsp bouillion powder</li>
                         <li>4 tbsp vietnamese fish sauce</li>
                     </ul>
-                    <li>Meatballs</li>
+                    </li>
+                    <li>Meatballs
                     <ul>
                         <li>1 shallot</li>
                         <li>2 cloves garlic</li>
@@ -124,18 +129,21 @@
                         <li>1 egg</li>
                         <li>2 tbsp fish sauce</li>
                     </ul>
-                    <li>Other Topping Suggestions</li>
+                    </li>
+                    <li>Other Topping Suggestions
                     <ul>
                         <li>12oz silk or fried tofu</li>
                         <li>Thai basil</li>
                         <li>Green onion</li>
                         <li>Bean sprouts</li>
                     </ul>
-                    <li>To Serve:</li>
+                    </li>
+                    <li>To Serve:
                     <ul>
                         <li>Three Ladies rice vermicelli for thin noodles</li>
                         <li>Fresh Pad Thai noodle for thick noodles</li>
                     </ul>
+                    </li>
                 </ul>
             </div>
 
@@ -165,6 +173,9 @@
                     Be sure to rinse noodles in cold water after cooking.</li>
                 <li>Pour soup over noodles, top with basil, green onion, and bean sprouts.</li>
             </ol>
+
+        </div>
+
         </div>
 
     </body>
