--- a/final_project/garlic-twist.html
+++ b/final_project/garlic-twist.html
@@ -5,7 +5,7 @@
 
         <meta name="description" content="A step-by-step guide to one of my favorite
         recipe for Garlic & Chive Twist Buns, complete with tips and suggestions. 
-        This recipe is an adaption of LaceBakes's recipe.">
+        This recipe is an adaption of Cookim_Mama's recipe.">
 
         <link rel="stylesheet" href="style.css">
 
@@ -13,6 +13,8 @@
             h1 {
                 font-size: 300%;
                 margin-left: 230px;
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 10px;
             }
 
             #recipe {
@@ -29,14 +31,12 @@
                 color: rgb(43, 28, 0);
                 width: auto;
                 height: auto;
-                padding-left: 20px;
-                padding-right: 30px;
-                padding-bottom: 20px;
+                padding: 10px 30px 30px 40px;
             }
 
             #image-container {
                 width: 500px;
-                height: 579px;
+                height: 645px;
                 overflow: hidden;
             }
 
@@ -44,7 +44,7 @@
                 width: 100%;
                 height: auto;
                 position: relative;
-                bottom: 50px;
+                bottom: 20px;
             }
 
             #container-b {
@@ -69,6 +69,7 @@
         </style>
     </head>
     <body>
+        <div id="background-2">
 
         <div id="navbar">
             <ul id="top-menu">
@@ -87,7 +88,7 @@
                     <li><a id="highlight-nav" href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -99,10 +100,13 @@
 
 
             <div id="container-a">
+
+                <p><em>This recipe is an adaptation of a recipe from Cookim_Mama.</em></p>
+
                 <h2>Ingredients:</h2>
 
                 <ul>
-                    <li>Dough</li>
+                    <li>Dough
                     <ul>
                         <li>170g sourcream</li>
                         <li>1 egg</li>
@@ -113,21 +117,22 @@
                         <li>40g milk</li>
                         <li>5g instant yeast</li>
                     </ul>
-                    <p></p>
-                    <li>Tangzhong</li>
+                    </li>
+                    <li>Tangzhong
                     <ul>
                         <li>90g milk</li>
                         <li>90g water</li>
                         <li>30g flour</li>
                     </ul>
-                    <p></p>
-                    <li>Filling</li>
+                    </li>
+                    <li>Filling
                     <ul>
                         <li>4 tbsp butter softened</li>
                         <li>1 tsp salt</li>
                         <li>1/3 cup chopped chives</li>
                         <li>2-3 whole heads of garlic <div style="color: rgba(0, 0, 0, 0.5); display: inline;">the more the better</div></li>
                     </ul>
+                    </li>
                 </ul>
             </div>
 
@@ -175,6 +180,8 @@
                 <li>Brush with 1 tbsp of melted butter mixed
                     with 1 tbsp of honey <div style="color: rgba(0, 0, 0, 0.5); display: inline;">optional</div></li>
             </ol>
+        </div>
+
         </div>
 
     </body>
