--- a/final_project/recipe.html
+++ b/final_project/recipe.html
@@ -17,6 +17,7 @@
                 display: flex;
                 flex-wrap: wrap;
                 justify-content: center;
+                transition: all 1s;
             }
 
             #recipe-a, #recipe-b, #recipe-c, #recipe-d {
@@ -27,6 +28,7 @@
                 height: 400px;
                 margin: 10px;
                 padding: 20px;
+                transition: all 1s ease;
             }
 
             #description-a, #description-b, #description-c, #description-d {
@@ -45,26 +47,26 @@
                 overflow: hidden;
             }
 
-            #image-a > img {
+            #image-a img {
                 width: auto;
                 height: 100%;
             }
 
-            #image-b > img {
+            #image-b img {
                 width: 100%;
                 height: auto;
                 position: relative;
                 bottom: 50px;
             }
 
-            #image-c > img {
+            #image-c img {
                 width: 100%;
                 height: auto;
                 bottom: 70px;
                 position: relative;
             }
 
-            #image-d > img {
+            #image-d img {
                 width: 100%;
                 height: auto;
                 position: relative;
@@ -74,13 +76,36 @@
             h1 {
                 font-size: 500%;
                 margin-left: 263px;
-                text-align: center;
+                background-color: rgba(255, 255, 255, 0.8);
+                padding: 10px;
+            }
+
+            a {
+                color: rgb(43, 28, 0);
+            }
+
+            #recipe-a:hover {
+                transform: scale(1.2);
+            }
+
+            #recipe-b:hover {
+                transform: scale(1.2);
+            }
+
+            #recipe-c:hover {
+                transform: scale(1.2);
+            }
+
+            #recipe-d:hover {
+                transform: scale(1.2);
             }
 
         </style>
 
     </head>
     <body>
+
+        <div id="background-2">
 
         <div id="navbar">
             <ul id="top-menu">
@@ -99,7 +124,7 @@
                     <li><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></li>
                 </ul>
                 </li>
-                <li><a href="">Submissions</a></li>
+                <li><a href="submission.html">Submissions</a></li>
                 <li><a href="about.html">About</a></li>
             </ul>
         </div>
@@ -110,10 +135,10 @@
 
             <div id="recipe-a">
 
-                <div id="image-a"><img src="imgs/IMG_0708.jpeg" alt="bun-rieu"></div>
+                <div id="image-a"><a href="bun-rieu.html"><img src="imgs/IMG_0708.jpeg" alt="bun-rieu"></a></div>
 
                 <div id="description-a">
-                    <h2>Bun Rieu</h2>
+                    <h2><a href="bun-rieu.html">Bun Rieu</a></h2>
                     <p>Bun Rieu, a Vietnamese soup, is a culinary masterpiece 
                         that captivates the palate with its intricate blend of 
                         savory, sweet, and umami notes. The heart of this dish 
@@ -133,10 +158,10 @@
 
             <div id="recipe-b">
 
-                <div id="image-b"><img src="imgs/IMG_0559.jpeg" alt="foccacia"></div>
+                <div id="image-b"><a href="focaccia.html"><img src="imgs/IMG_0559.jpeg" alt="foccacia"></a></div>
 
                 <div id="description-b">
-                <h2>Overnight Focaccia</h2>
+                <h2><a href="focaccia.html">Overnight Focaccia</a></h2>
                 <p>Focaccia, an Italian delight, is a culinary marvel that elevates 
                     the art of bread. This oven-baked flatbread boasts a golden, 
                     olive oil-infused crust, and its pillowy interior is adorned 
@@ -152,10 +177,10 @@
 
             <div id="recipe-c">
 
-                <div id="image-c"><img src="imgs/IMG_2584.jpeg" alt="thit-kho-truong"></div>
+                <div id="image-c"><a href="thit-kho.html"><img src="imgs/IMG_2584.jpeg" alt="thit-kho-truong"></a></div>
 
                 <div id="description-c">
-                <h2>Thit Kho Truong</h2>
+                <h2><a href="thit-kho.html">Thit Kho Truong</a></h2>
                 <p>Thit Kho Truong, a Vietnamese comfort dish, invites you to savor 
                     the rich and nuanced flavors of caramelized pork belly. Slow-cooked 
                     to perfection, the succulent pork is bathed in a savory-sweet sauce, 
@@ -171,10 +196,10 @@
 
             <div id="recipe-d">
 
-                <div id="image-d"><img src="imgs/IMG_7415.jpeg" alt="garlic-twists"></div>
+                <div id="image-d"><a href="garlic-twist.html"><img src="imgs/IMG_7415.jpeg" alt="garlic-twists"></a></div>
 
                 <div id="description-d">
-                    <h2>Garlic & Chive Twist Buns</h2>
+                    <h2><a href="garlic-twist.html">Garlic & Chive Twist Buns</a></h2>
                     <p>Garlic and Chive Twist Buns are a delightful fusion of flavors and textures. 
                         These whimsical creations feature soft, twisted buns infused with aromatic 
                         garlic and fresh chives. With each bite, you experience the satisfying 
@@ -186,6 +211,8 @@
 
             </div>
 
+        </div>
+        
         </div>
 
     </body>
